--- a/usr/src/lib/libprtdiag_psr/sparc/ontario/Makefile
+++ b/usr/src/lib/libprtdiag_psr/sparc/ontario/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,14 +28,15 @@
 
 UTSBASE   = ../../../../uts
 
-PLATFORM_OBJECTS= ontario.o erie.o pelton.o stpaul.o huron.o
+PLATFORM_OBJECTS= ontario.o erie.o pelton.o stpaul.o huron.o glendale.o
 
 include ../Makefile.com
 
 #
 # links in /usr/platform
 #
-LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300
+LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300 
+LINKED_PLATFORMS	+= SUNW,Sun-Blade-T6320
 
 LINKED_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%/lib)
