--- a/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
+++ b/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -76,6 +76,7 @@ LDLIBS +=	-lc -lpicltree -lumem -lnvpair
 LINTFLAGS +=	-erroff=E_BAD_PTR_CAST_ALIGN -v
 
 LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300
+LINKED_PLATFORMS	+= SUNW,Sun-Blade-T6320
 
 LINKED_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%/lib)
