--- a/usr/src/lib/libpcp/sparc/Makefile
+++ b/usr/src/lib/libpcp/sparc/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -38,7 +38,8 @@ PLATFORM_OBJECTS= libpcp.o pcp_utils.o
 PLATFORM=sun4v
 LINKED_PLATFORMS = SUNW,Sun-Fire-T200 \
 		SUNW,Netra-CP3060 \
-		SUNW,Sun-Blade-T6300
+		SUNW,Sun-Blade-T6300 \
+		SUNW,Sun-Blade-T6320
 
 
 include ../Makefile.com
