--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -38,6 +38,7 @@ LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T5120
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T5220
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T1000
 LINKED_PLATFORMS += SUNW,Sun-Blade-T6300
+LINKED_PLATFORMS += SUNW,Sun-Blade-T6320
 PROMIF		 = ieee1275
 PSMBASE		 = $(UTSBASE)/../psm
 
