PSARC 2007/153 iSCSI target provider 6498786 the iSCSI target's SMF stop method takes too long 6573073 usdt args[] are incorrectly translated 6573074 PSARC 2007/153 iSCSI target provider 6573077 iscsitgtd should be compiled with CTF data 6574850 dt_idhash_iter() needs to cache the array length

--- a/usr/src/cmd/iscsi/iscsitgtd/Makefile
+++ b/usr/src/cmd/iscsi/iscsitgtd/Makefile
@@ -50,6 +50,12 @@ $(ROOTSVCSYSTEM)/iscsi_target.xml	:= OWNER = root
 $(ROOTSVCSYSTEM)/iscsi_target.xml	:= GROUP = bin
 $(ROOTSVCSYSTEM)/iscsi_target.xml	:= FILEMODE = 0444
 
+DLIBSRCS = iscsi.d
+
+ROOTDLIBDIR = $(ROOT)/usr/lib/dtrace
+ROOTDLIBS = $(DLIBSRCS:%=$(ROOTDLIBDIR)/%)
+$(ROOTDLIBS) := FILEMODE = 0644
+
 CPPFLAGS += -D_FILE_OFFSET_BITS=64 -I${ISCSICOMMONDIR}
 
 all	:=	TARGET = all
@@ -64,7 +70,7 @@ all:	$(SUBDIRS)
 
 clean clobber lint:	$(SUBDIRS)
 
-install: $(SUBDIRS) $(ROOTMANIFEST) $(ROOTSVCMETHOD)
+install: $(SUBDIRS) $(ROOTMANIFEST) $(ROOTDLIBS) $(ROOTSVCMETHOD)
 	-$(RM) $(ROOTUSRSBINPROG)
 	-$(LN) $(ISAEXEC) $(ROOTUSRSBINPROG)
 
@@ -79,7 +85,14 @@ $(POFILE): $(POFILES)
 
 check:	$(CHKMANIFEST)
 
+$(ROOTDLIBDIR):
+	$(INS.dir)
+
+$(ROOTDLIBDIR)/%.d: %.d
+	$(INS.file)
+
+$(ROOTDLIBS): $(ROOTDLIBDIR)
+
 FRC:
 
 include ../../Makefile.targ
-
