PSARC/2005/126 InfiniBand Flash Update Tool (ibflash) 6237582 No field firmware update facility for IB-HCA 6407822 fwflash does not provide Build number & Product Name of flash 6555463 fwflash subminor revision need to change to decimal

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -139,6 +139,7 @@ COMMON_SUBDIRS = \
 	cmd/fs.d/ufs/fsirand\
 	cmd/fs.d/zfs/fstyp \
 	cmd/fuser \
+	cmd/fwflash \
 	cmd/gcore \
 	cmd/getconf \
 	cmd/getdevpolicy \
