PSARC/2007/349 Intel Microcode Update Support 6558456 Need to support microcode update on Intel platforms

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -427,6 +427,7 @@ $(CLOSED_BUILD)COMMON_SUBDIRS += \
 i386_SUBDIRS= \
 	cmd/biosdev \
 	cmd/rtc \
+	cmd/ucodeadm \
 	lib/brand/lx \
 	lib/cfgadm_plugins/sata
 
