--- a/usr/src/uts/i86pc/Makefile.files
+++ b/usr/src/uts/i86pc/Makefile.files
@@ -70,6 +70,7 @@ CORE_OBJS +=			\
 	machdep.o		\
 	mem_config_stubs.o	\
 	memnode.o		\
+	microcode.o		\
 	mlsetup.o		\
 	mp_call.o		\
 	mp_implfuncs.o		\
