PSARC 2007/329 SCSI inquiry property enhancement PSARC 2007/339 Device Size Properties PSARC 2007/388 Generic Topology for Internal Disks 6572672 Generic Topology for Internal Disks

--- a/usr/src/cmd/fm/modules/common/disk-monitor/disk-monitor.conf
+++ b/usr/src/cmd/fm/modules/common/disk-monitor/disk-monitor.conf
@@ -19,14 +19,13 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# fmd configuration file for the sfx4500-disk.so diagnosis engine.
+# fmd configuration file for the disk-monitor.so disk monitor.
 #
-subscribe ereport.io.sata.*
 subscribe fault.io.disk.*
 subscribe list.repaired
 dictionary DISK
