--- a/usr/src/lib/fm/topo/modules/Makefile
+++ b/usr/src/lib/fm/topo/modules/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -33,6 +33,6 @@ sparc_SUBDIRS =	sun4u \
 
 i386_SUBDIRS = i86pc
 
-SUBDIRS = $($(MACH)_SUBDIRS)
+SUBDIRS = common $($(MACH)_SUBDIRS)
 
 include ../../Makefile.subdirs
