--- a/usr/src/lib/fm/topo/libtopo/Makefile
+++ b/usr/src/lib/fm/topo/libtopo/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,7 +28,7 @@
 include ../../../Makefile.lib
 include ../../Makefile.lib
 
-FMHDRS = libtopo.h topo_mod.h topo_hc.h
+FMHDRS = libtopo.h topo_mod.h topo_hc.h topo_list.h
 HDRDIR = common
 
 SUBDIRS = $(MACH)
