--- a/usr/src/lib/fm/topo/maps/i86pc/Makefile
+++ b/usr/src/lib/fm/topo/maps/i86pc/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -27,7 +27,7 @@
 ARCH = i86pc
 CLASS = arch
 DTDFILE = topology.dtd.1
-TOPOFILE = i86pc-hc-topology.xml storage-hc-topology.xml
+TOPOFILE = i86pc-hc-topology.xml
 SRCDIR = ../i86pc
 
 include ../Makefile.map
