--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -139,7 +139,6 @@ COMMON_SUBDIRS = \
 	cmd/fs.d/ufs/fsirand\
 	cmd/fs.d/zfs/fstyp \
 	cmd/fuser \
-	cmd/fwflash \
 	cmd/gcore \
 	cmd/getconf \
 	cmd/getdevpolicy \
@@ -414,6 +413,7 @@ COMMON_SUBDIRS = \
 
 $(CLOSED_BUILD)COMMON_SUBDIRS += \
 	$(CLOSED)/cmd/cmd-inet/usr.lib/in.iked \
+	$(CLOSED)/cmd/fwflash \
 	$(CLOSED)/cmd/pax \
 	$(CLOSED)/cmd/pcitool \
 	$(CLOSED)/cmd/sed_xpg4 \
