--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -166,7 +166,6 @@ COMMON_SUBDIRS=		\
 	fs.d		\
 	fstyp		\
 	fuser		\
-	fwflash		\
 	gcore		\
 	gencat		\
 	geniconvtbl	\
@@ -434,6 +433,7 @@ COMMON_SUBDIRS=		\
 
 $(CLOSED_BUILD)COMMON_SUBDIRS += \
 	$(CLOSED)/cmd/dodatadm	\
+	$(CLOSED)/cmd/fwflash	\
 	$(CLOSED)/cmd/iconv	\
 	$(CLOSED)/cmd/ksh	\
 	$(CLOSED)/cmd/llc2	\
@@ -555,7 +555,6 @@ MSGSUBDIRS=		\
 	fm		\
 	fold		\
 	fs.d		\
-	fwflash		\
 	geniconvtbl	\
 	genmsg		\
 	getconf		\
@@ -701,6 +700,7 @@ MSGSUBDIRS=		\
 	zpool
 
 $(CLOSED_BUILD)MSGSUBDIRS += \
+	$(CLOSED)/cmd/fwflash	\
 	$(CLOSED)/cmd/iconv	\
 	$(CLOSED)/cmd/ksh	\
 	$(CLOSED)/cmd/llc2	\
