--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1335,6 +1335,8 @@ IWI_OBJS += ipw2200_hw.o ipw2200.o
 
 WPI_OBJS += wpi.o
 
+RAL_OBJS += rt2560.o ral_rate.o
+
 #
 #	Build up defines and paths.
 #
