6495050 Add dcmds to view and search machine description 6546910 Add dcmds to examine last epacket of the error queues

--- a/usr/src/cmd/mdb/sun4v/modules/errh/Makefile
+++ b/usr/src/cmd/mdb/sun4v/modules/errh/Makefile
@@ -26,5 +26,5 @@
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-SUBDIRS = errh ldc mdesc unix vdsk
-include ../../Makefile.subdirs
+SUBDIRS = v9
+include ../../../Makefile.subdirs
