PSARC/2004/826 Opteron Athlon64 Frequency Management 6358066 PSARC/2004/826 Opteron Athlon64 Frequency Management 6512756 Solaris should support Intel's Enhanced Speedstep 6335616 AMD64 CPU PwrMgmt needs Notify/_PPC for changes in P-states

--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -610,6 +610,9 @@ MDESCHDRS=			\
 	mdesc.h			\
 	mdesc_impl.h		
 
+CPUDRVHDRS=			\
+	cpudrv.h
+
 CRYPTOHDRS=			\
 	elfsign.h		\
 	ioctl.h			\
@@ -976,6 +979,7 @@ CHECKHDRS=						\
 	$(AUDIOHDRS:%.h=audio/%.check)			\
 	$(BSCHDRS:%.h=%.check)				\
 	$(CHKHDRS:%.h=%.check)				\
+	$(CPUDRVHDRS:%.h=%.check)			\
 	$(CRYPTOHDRS:%.h=crypto/%.check)		\
 	$(DCAMHDRS:%.h=dcam/%.check)			\
 	$(IBHDRS:%.h=ib/%.check)			\
