--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -254,6 +254,10 @@ DRV_KMODS	+= mc-amd
 DRV_KMODS	+= tzmon
 DRV_KMODS	+= battery
 
+DRV_KMODS	+= cpudrv
+DRV_KMODS	+= cpunex
+DRV_KMODS	+= ppm
+
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= memtest
 
 #
