--- a/usr/src/uts/sun4u/Makefile.files
+++ b/usr/src/uts/sun4u/Makefile.files
@@ -97,13 +97,13 @@ PSYCHO_PCI_OBJS	+= $(PCI_COMMON_OBJS) pcipsy.o
 SCHIZO_PCI_OBJS	+= $(PCI_COMMON_OBJS) pcisch_asm.o pcisch.o pcix.o
 SIMBA_PCI_OBJS	+= simba.o
 DB21554_OBJS	+= db21554.o
-US_OBJS 	+= us_drv.o
+US_OBJS 	+= cpudrv.o cpudrv_plat.o
 POWER_OBJS	+= power.o
 EPIC_OBJS	+= epic.o
 GRBEEP_OBJS	+= grbeep.o
 ADM1031_OBJS	+= adm1031.o
 ICS951601_OBJS	+= ics951601.o
-PPM_OBJS	+= ppm_subr.o ppm.o
+PPM_OBJS	+= ppm_subr.o ppm.o ppm_plat.o
 OPLCFG_OBJS	+= opl_cfg.o
 PCF8584_OBJS    += pcf8584.o
 PCA9556_OBJS    += pca9556.o
