6555540 picl PRI plug-in needs to handle hot-plug and PRI updates 6559552 libprtdiag should not assume that "IOBD" is the home for wayward IO devices 6561393 Huron platform support needs to lose its platform-specific prtdiag overlay 6563508 prtdiag/prtpicl broken on guest domains on s10u4_08 and snv_62 onwards 6566442 prtdiag memory configuration formating needed ...

--- a/usr/src/lib/fm/topo/maps/SUNW,SPARC-Enterprise-T5120/Makefile
+++ b/usr/src/lib/fm/topo/maps/SUNW,SPARC-Enterprise-T5120/Makefile
@@ -23,20 +23,13 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS =	sun4u \
-		sun4v \
-		SUNW,Sun-Fire \
-		SUNW,Sun-Fire-T200 \
-		SUNW,Sun-Fire-15000 \
-		SUNW,SPARC-Enterprise \
-		SUNW,Sun-Blade-T6320 \
-		SUNW,SPARC-Enterprise-T5120
+PLATFORMS = SUNW,SPARC-Enterprise-T5120
+CLASS = platform
+DTDFILE =
+TOPOFILE = SPARC-Enterprise-T5120-hc-topology.xml \
+	   SPARC-Enterprise-T5220-hc-topology.xml
+SRCDIR = ../SUNW,SPARC-Enterprise-T5120
 
-i386_SUBDIRS = i86pc \
-		SUNW,Sun-Fire-X4500
-
-SUBDIRS = $($(MACH)_SUBDIRS)
-
-include ../../Makefile.subdirs
+include ../Makefile.map
