--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -76,7 +76,7 @@ UNAME_M		= $(PLATFORM)
 #IMPLEMENTED_PLATFORM	=
 #PLATFORMS                = $(IMPLEMENTED_PLATFORM)
 
-IMPLEMENTATIONS		= ontario montoya
+IMPLEMENTATIONS		= ontario montoya huron
 
 #ROOT_PLAT_DIRS		= $(PLATFORMS:%=$(ROOT_PLAT_DIR)/%)
 #USR_PLAT_DIRS		= $(PLATFORMS:%=$(USR_PLAT_DIR)/%)
