--- a/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
+++ b/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
@@ -77,6 +77,7 @@ LINTFLAGS +=	-erroff=E_BAD_PTR_CAST_ALIGN -v
 
 LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300
 LINKED_PLATFORMS	+= SUNW,Sun-Blade-T6320
+LINKED_PLATFORMS	+= SUNW,SPARC-Enterprise-T5120
 
 LINKED_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS		= $(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%/lib)
