--- a/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
+++ b/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
@@ -35,6 +35,7 @@ PLATLINKS	= SUNW,Sun-Fire-T200
 PLATLINKS	+= SUNW,Netra-CP3060
 PLATLINKS	+= SUNW,Sun-Blade-T6300
 PLATLINKS	+= SUNW,Sun-Blade-T6320
+PLATLINKS	+= SUNW,SPARC-Enterprise-T5120
 
 LINKED_DIRS	= $(PLATLINKS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS	= $(PLATLINKS:%=$(USR_PLAT_DIR)/%/lib)
