--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1337,6 +1337,8 @@ WPI_OBJS += wpi.o
 
 RAL_OBJS += rt2560.o ral_rate.o
 
+RTW_OBJS += rtw.o smc93cx6.o rtwphy.o rtwphyio.o
+
 #
 #	Build up defines and paths.
 #
