6557849 Remove comma from "Solaris Express, Developer Edition" 6581317 Need internal pkg to deliver libdiskmgt.h for install consolidation CBE

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -23,7 +23,7 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 include $(SRC)/Makefile.master
@@ -242,6 +242,7 @@ COMMON_SUBDIRS= \
 	SUNWixgb \
 	SUNWkrbr \
 	SUNWkrbu \
+	SUNWldskint \
 	SUNWlibsasl \
 	SUNWllc \
 	SUNWllcr\
