6569573 idmapd could log better messages when AD LDAP bind fails 6579507 idmapd should generate and set a machine_sid when it's missing 6579919 Need Creator Authority domain string in idmap.h

--- a/usr/src/cmd/idmap/idmapd/Makefile
+++ b/usr/src/cmd/idmap/idmapd/Makefile
@@ -60,7 +60,7 @@ $(POFILE) := CPPFLAGS += $(INCS)
 CLOBBERFILES += $(IDMAP_PROT_H)
 
 CFLAGS += -v
-LDLIBS += -lsecdb -lnsl -lidmap -lscf -lldap
+LDLIBS += -lsecdb -lnsl -lidmap -lscf -lldap -luuid
 
 $(PROG) := MAPFILES = $(MAPFILE.INT) $(MAPFILE.NGB)
 $(PROG) := LDFLAGS += $(MAPFILES:%=-M%)
