--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -526,7 +526,7 @@ ATUN_OBJS +=	atun.o
 RDS_OBJS +=	rdsddi.o rdssubr.o rds_opt.o rds_ioctl.o
 
 RDSIB_OBJS +=	rdsib.o rdsib_ib.o rdsib_cm.o rdsib_ep.o rdsib_buf.o \
-		rdsib_arp.o rdsib_arp_link.o rdsib_debug.o rdsib_sc.o
+		rdsib_debug.o rdsib_sc.o
 
 UDP_OBJS +=	udpddi.o
 
@@ -570,7 +570,8 @@ NET80211_OBJS += net80211.o net80211_proto.o net80211_input.o \
 
 IB_OBJS +=	ibnex.o ibnex_ioctl.o
 
-IBCM_OBJS +=	ibcm_impl.o ibcm_sm.o ibcm_ti.o ibcm_utils.o ibcm_path.o
+IBCM_OBJS +=	ibcm_impl.o ibcm_sm.o ibcm_ti.o ibcm_utils.o ibcm_path.o \
+		ibcm_arp.o ibcm_arp_link.o
 
 IBDM_OBJS +=	ibdm.o
 
