--- a/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
+++ b/usr/src/cmd/picl/plugins/sun4v/ontario/piclsbl/Makefile
@@ -75,7 +75,7 @@ LDLIBS +=	-lc -lpicltree -lumem -lnvpair
 
 LINTFLAGS +=	-erroff=E_BAD_PTR_CAST_ALIGN -v
 
-LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300
+LINKED_PLATFORMS	= SUNW,Sun-Blade-T6300 SUNW,T5140
 LINKED_PLATFORMS	+= SUNW,Sun-Blade-T6320
 LINKED_PLATFORMS	+= SUNW,SPARC-Enterprise-T5120
 
