--- a/usr/src/lib/fm/topo/maps/SUNW,T5140/Makefile
+++ b/usr/src/lib/fm/topo/maps/SUNW,T5140/Makefile
@@ -19,25 +19,16 @@
 # CDDL HEADER END
 #
 
-#
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS =	sun4u \
-		sun4v \
-		SUNW,Sun-Fire \
-		SUNW,Sun-Fire-T200 \
-		SUNW,Sun-Fire-15000 \
-		SUNW,SPARC-Enterprise \
-		SUNW,Sun-Blade-T6320 \
-		SUNW,SPARC-Enterprise-T5120 \
-		SUNW,T5140
+PLATFORMS = SUNW,T5140
+CLASS = platform
+DTDFILE =
+TOPOFILE = T5140-hc-topology.xml \
+	T5240-hc-topology.xml
+SRCDIR = ../SUNW,T5140
 
-i386_SUBDIRS = i86pc \
-		SUNW,Sun-Fire-X4500
-
-SUBDIRS = $($(MACH)_SUBDIRS)
-
-include ../../Makefile.subdirs
+include ../Makefile.map
