--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -179,11 +179,11 @@ N2_PCBE_OBJS	= niagara2_pcbe.o
 # XXXQ Make generic4vcpu
 #
 CPU_OBJ		+= $(OBJS_DIR)/mach_cpu_module.o
-GENERIC_OBJS = generic.o generic_copy.o common_asm.o
+GENERIC_OBJS = generic.o generic_copy.o common_asm.o atomic.o
 NIAGARACPU_OBJS = niagara.o niagara_copy.o common_asm.o niagara_perfctr.o
-NIAGARACPU_OBJS += niagara_asm.o
+NIAGARACPU_OBJS += niagara_asm.o atomic.o
 NIAGARA2CPU_OBJS = niagara2.o niagara_copy.o common_asm.o niagara_perfctr.o
-NIAGARA2CPU_OBJS += niagara2_asm.o
+NIAGARA2CPU_OBJS += niagara2_asm.o niagara2_atomic.o
 
 #
 #			platform module
