--- a/usr/src/uts/sun4v/Makefile.maramba
+++ b/usr/src/uts/sun4v/Makefile.maramba
@@ -18,26 +18,20 @@
 #
 # CDDL HEADER END
 #
-
+#
 #
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
+#
+#	Global definitions for sun4v maramba implementation specific modules.
+#
 
-sparc_SUBDIRS =	sun4u \
-		sun4v \
-		SUNW,Sun-Fire \
-		SUNW,Sun-Fire-T200 \
-		SUNW,Sun-Fire-15000 \
-		SUNW,SPARC-Enterprise \
-		SUNW,Sun-Blade-T6320 \
-		SUNW,SPARC-Enterprise-T5120 \
-		SUNW,T5140
+#
+#	Define directories.
+#
 
-i386_SUBDIRS = i86pc \
-		SUNW,Sun-Fire-X4500
-
-SUBDIRS = $($(MACH)_SUBDIRS)
-
-include ../../Makefile.subdirs
+USR_MARAMBA_DIR		= $(USR_PLAT_DIR)/SUNW,T5140
+USR_MARAMBA_SBIN_DIR	= $(USR_MARAMBA_DIR)/sbin
+USR_MARAMBA_LIB_DIR	= $(USR_MARAMBA_DIR)/lib
