--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -36,6 +36,8 @@ PLATFORM	 = sun4v
 LINKED_PLATFORMS += SUNW,Sun-Fire-T1000
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T5120
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T5220
+LINKED_PLATFORMS += SUNW,T5140
+LINKED_PLATFORMS += SUNW,T5240
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T1000
 LINKED_PLATFORMS += SUNW,Sun-Blade-T6300
 LINKED_PLATFORMS += SUNW,Sun-Blade-T6320
@@ -76,7 +78,7 @@ UNAME_M		= $(PLATFORM)
 #IMPLEMENTED_PLATFORM	=
 #PLATFORMS                = $(IMPLEMENTED_PLATFORM)
 
-IMPLEMENTATIONS		= ontario montoya huron
+IMPLEMENTATIONS		= ontario montoya huron maramba
 
 #ROOT_PLAT_DIRS		= $(PLATFORMS:%=$(ROOT_PLAT_DIR)/%)
 #USR_PLAT_DIRS		= $(PLATFORMS:%=$(USR_PLAT_DIR)/%)
@@ -428,10 +430,11 @@ XMODS		+=
 #
 #	cpu modules
 #
-CPU_KMODS	+= generic niagara niagara2
+CPU_KMODS	+= generic niagara niagara2 vfalls
 
 #
 #	Performance Counter BackEnd Modules (/usr/kernel/pcbe):
 #
 PCBE_KMODS	+= niagara_pcbe
 PCBE_KMODS	+= niagara2_pcbe
+PCBE_KMODS	+= vfalls_pcbe
