6303365 Need tunable to adjust /usr/lib/inet/inetd backlog queue (fix build)

--- a/usr/src/lib/libsecdb/help/auths/Makefile
+++ b/usr/src/lib/libsecdb/help/auths/Makefile
@@ -68,6 +68,7 @@ HTMLENTS = \
 	SmfAutofsStates.html \
 	SmfCronStates.html \
 	SmfHeader.html \
+	SmfInetdStates.html \
 	SmfIPsecStates.html \
 	SmfManageHeader.html \
 	SmfModifyAppl.html \
@@ -83,6 +84,7 @@ HTMLENTS = \
 	SmfSshStates.html \
 	SmfSyslogStates.html \
 	SmfValueHeader.html \
+	SmfValueInetd.html \
 	SmfValueIPsec.html \
 	SmfValueNWAM.html \
 	SmfValueRouting.html \
