PSARC/2007/307 Victoria Falls CPU/memory FMA 6532872 Incorrect fault name reported for store buffer 6536478 anchored page retire for T5140/T5240 6536482 diagnose FBR and FBU errors to branch 6545057 on T5140/T5240, diagnose mem UE as L2 cache data UE if C2C bit is set 6545604 Enhance CPU/Mem DE to support T2plus 6545632 add US-T2plus support to CPU/Mem error injector

--- a/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
+++ b/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
@@ -26,7 +26,8 @@
 
 ARCH = sun4v
 
-sun4v_SRCS = cmd_hc_sun4v.c
+sun4v_SRCS = cmd_hc_sun4v.c \
+	     cmd_branch.c
 
 INCDIRS = $(SRC)/uts/sun4v \
 	$(ROOT)/usr/platform/sun4v/include
